css, fixed first to review

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Yeseva+One&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&family=Yeseva+One&display=swap"
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/3bdae81422.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
