--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/3bdae81422.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Authenticate Me</title>
+  <title>wanderly.</title>
 </head>
 
 <body>
